fix card padding on mobile

--- a/src/GraphLayout/Card.css
+++ b/src/GraphLayout/Card.css
@@ -68,6 +68,7 @@
     margin-top: 8px;
     padding: 8px;
     text-align: left;
+    height: auto;
   }
   .GraphCardInfo {
   }
