--- a/src/GraphLayout/GraphLayout.css
+++ b/src/GraphLayout/GraphLayout.css
@@ -107,6 +107,7 @@
     max-width: initial;
     padding: 0;
     flex: none;
+    padding-bottom: 24px;
   }
 
   .GraphLayoutRightColumn {
@@ -127,8 +128,7 @@
   }
 
   .GraphLayoutBlurb {
-    padding: 0 24px;
-    padding-top: 8px;
+    padding: 8px 0;
     font-size: 24px;
   }
 
